fixed overflow

--- a/src/components/about/about-style.css
+++ b/src/components/about/about-style.css
@@ -1,10 +1,16 @@
+body{
+    width: 100%;
+    overflow: hidden;
+}
+
 .about-section{
-    background-color: brown;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     flex-direction: column;
+
     
 }   
 
@@ -22,6 +28,7 @@ input {
     border: 0;
     display: block;
     margin: 1rem;
+    color: #000;
 }
 
 textarea {
@@ -31,9 +38,11 @@ textarea {
     border-radius: 2px;
     display: block;
     margin: 1rem;
+    color: #000;
 }
 
 ::placeholder {
     text-align: center;
     font-size: 1.1rem;
+    color: black;
   }
